syntax="proto3";

package service;
option java_package = "org.dst.server.service";
option java_outer_classname = "ExampleMessage";

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    bool success = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}
